@@ -2,6 +2,17 @@
 
         Reviewed by Eric Seidel.
 
+        Fix some test-webkitpy expectations
+        https://bugs.webkit.org/show_bug.cgi?id=33345
+
+        I forgot to change these when I added the CheckStyle step.
+
+        * Scripts/webkitpy/commands/upload_unittest.py:
+
+2010-01-07  Adam Barth  <abarth@webkit.org>
+
+        Reviewed by Eric Seidel.
+
         webkit-patch edit-changelogs (or upload) will open blank files if run outside the root
         https://bugs.webkit.org/show_bug.cgi?id=33341
 
